src/components/home/Projects/index.css
.projects {
  padding: 0 20px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.project {
  width: 31%;
  margin-bottom: 30px;
  background-position: cover;
  opacity: 0;
  transform: translate3d(-50px, 0, 0);
  transition: transform 1s, opacity 2s;
}

.project:nth-of-type(2) {
  transition-delay: 0.3s;
}

.project:nth-of-type(3) {
  transition-delay: 0.6s;
}

.project:nth-of-type(4) {
  transition-delay: 0.9s;
}

.project:nth-of-type(5) {
  transition-delay: 1.2s;
}

.project:nth-of-type(6) {
  transition-delay: 1.5s;
}

.project:nth-of-type(7) {
  transition-delay: 1.8s;
}

.project:nth-of-type(8) {
  transition-delay: 2.1s;
}

.project:nth-of-type(9) {
  transition-delay: 2.4s;
}

.projects.visible .project {
  opacity: 1;
  transform: translate3d(0, 0, 0);
}

.empty-project {
  width: 31%;
}

.project img {
  width: 100%;
  height: 100%;
  transition: opacity 0.5s;
}

.project:hover {
  background: #3085a3;
}

.project:hover img {
  opacity: 0.1;
}

.project .hover-content {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  text-align: center;
  flex-direction: column;
  justify-content: center;
}

.project .hover-content::before,
.project .hover-content::after {
  pointer-events: none;
  position: absolute;
  top: 25px;
  right: 25px;
  bottom: 25px;
  left: 25px;
  content: '';
  opacity: 0;
  transition: opacity 0.5s, transform 0.5s;
}

.project .hover-content::before {
  border-top: 3px solid #c6d7c7;
  border-bottom: 3px solid #c6d7c7;
  transform: scale(0, 1);
}

.project .hover-content::after {
  border-right: 3px solid #c6d7c7;
  border-left: 3px solid #c6d7c7;
  transform: scale(1, 0);
}

.project:hover .hover-content::before,
.project:hover .hover-content::after {
  opacity: 1;
  transform: scale(1);
}

.project .project-name,
.project .project-tagline {
  color: #c6d7c7;
  opacity: 0;
  transition: opacity 0.5s, transform 0.5s;
}

.project .project-name {
  font-size: 28px;
  font-weight: bold;
  margin-bottom: 20px;
  transform: translate3d(0, -20px, 0);
}

.project .project-tagline {
  font-size: 18px;
  transform: translate3d(0, 20px, 0);
}

.project:hover .project-name,
.project:hover .project-tagline {
  opacity: 1;
  transform: translate3d(0, 0, 0);
}

@media (max-width: 1200px) {
  .project {
    width: 48%;
    margin-bottom: 20px;
  }
}

@media (max-width: 700px) {
  .project {
    width: 100%;
  }
}

@media (min-width: 700px) and (max-width: 800px) {
  .project .project-name {
    font-size: 28px;
    margin-bottom: 10px;
  }

  .project .project-tagline {
    font-size: 16px;
  }
}

